# bs-accounts

./: .gitignore  API.md  Cargo.toml  Makefile  README.md  justfile
.cargo/: config.toml
.github/workflows/: Basic.yml
artifacts/: account_registry_middleware.wasm  bs721_account.wasm  bs721_account_marketplace.wasm  bs721_account_minter.wasm  checksums.txt  ownership_verifier.wasm
contracts/account-market/: Cargo.toml
contracts/account-market/examples/: schema.rs
contracts/account-market/src/: commands.rs  contract.rs  helpers.rs  hooks.rs  lib.rs  msg.rs  state.rs  unit_tests.rs
contracts/account-minter/: Cargo.toml
contracts/account-minter/src/: commands.rs  contract.rs  error.rs  msg.rs  sudo.rs
contracts/account-registry-middleware/: Cargo.toml  README.md
contracts/account-registry-middleware/src/: interface.rs  lib.rs
contracts/bs721-account/: Cargo.toml  README.md
contracts/bs721-account-marketplace/: Cargo.toml  README.md
contracts/bs721-account-marketplace/src/: commands.rs  contract.rs  error.rs  helpers.rs  hooks.rs  interface.rs  lib.rs  msgs.rs  state.rs  unit_tests.rs
contracts/bs721-account-minter/: Cargo.toml  README.md
contracts/bs721-account-minter/src/: commands.rs  contract.rs  error.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/bs721-account/examples/: schema.rs
contracts/bs721-account/src/: commands.rs  error.rs  helpers.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/ownership-verifier/: Cargo.toml
contracts/ownership-verifier/src/: interface.rs  lib.rs
contracts/smart-accounts/: README.md
contracts/smart-accounts/btsg-dao/: Cargo.toml
contracts/smart-accounts/btsg-dao/src/: contract.rs  digest.rs  lib.rs  msg.rs  state.rs
contracts/smart-accounts/btsg-ed25519/: Cargo.toml  Readme.md
contracts/smart-accounts/btsg-ed25519/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/smart-accounts/btsg-eth/: Cargo.toml  Readme.md
contracts/smart-accounts/btsg-eth/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/smart-accounts/btsg-irl/: Cargo.toml  Readme.md
contracts/smart-accounts/btsg-irl/src/: claims.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/smart-accounts/btsg-passkey/: Cargo.toml  README.md
contracts/smart-accounts/btsg-passkey/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/smart-accounts/btsg-recovery/: Cargo.toml  Readme.md
contracts/smart-accounts/btsg-recovery/src/: contract.rs  lib.rs  msg.rs
contracts/smart-accounts/btsg-wavs/: Cargo.toml  README.md
contracts/smart-accounts/btsg-wavs/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/smart-accounts/btsg-zktls/: Cargo.toml  Readme.md
contracts/smart-accounts/btsg-zktls/src/: claims.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
docs/: 00_disclaimer.md  00_overview.md  01_minting-an-account.md  02_associating-addresses.md  02_minting-an-account.md  03_associating-addresses.md  03_querying.md  04_selling_accounts.md  05_account-marketplace.md
schema/: account-registry-middleware.json  bs721-account-marketplace.json  bs721-account-minter.json  bs721-account.json  btsg-ed25519.json  btsg-eth.json  btsg-irl.json  btsg-passkey.json  btsg-wavs.json  btsg-zktls.json
scripts/: .env.mainnet  .env.testnet  00-download.sh  01-store.sh  02-init_mkt.sh  03-init_minter.sh  04-exec_mkt_setup.sh  1_upload.sh  2a_init_marketplace .sh  2b_init_minter.sh  3_setup_market.sh  Cargo.toml  README.md  broadcast.sh  exec_accept_bid.sh  exec_add_text.sh  exec_assoc.sh  exec_bid.sh  exec_mint.sh  exec_mint_specific_user.sh  exec_minter_update_config.sh  exec_pause.sh  exec_process_renewals.sh  exec_update_public_time.sh  exec_update_verifier.sh  migrate.sh  migrate_mkt.sh  migrate_mkt_bids.sh  optimize.sh  query_ask.sh  query_asks_by_renew_time.sh  query_bids_sorted_by_price.sh  query_col.sh  query_lookup.sh  query_metadata.sh  query_minter.sh  query_mkt.sh  query_mkt_bids_by_seller.sh  query_mkt_params.sh  query_token_info.sh  (+7 more)
scripts/sh/: .env.testnet  1_upload.sh  2a_init_marketplace .sh  optimize.sh  schema-and-codegen.sh
scripts/src/: lib.rs  networks.rs  suite.rs
scripts/src/deploy/: README.md  account.rs  btsg_wavs.rs  irl.rs  market.rs  minter.rs  mod.rs  networks.rs  zktls.rs
scripts/src/deploy/bundles/: mod.rs
scripts/src/test/: account.rs  minter.rs  mod.rs  smart_accounts.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs  suite.rs
test-suite/src/multi_test/: account_tests.rs  market_tests.rs  minter_tests.rs  mod.rs  smart_account_tests.rs  uint256_type_cast_tests.rs
ts/: codegen.ts  package.json
ts/src/: AccountMarketplace.client.ts  AccountMarketplace.message-composer.ts  AccountMarketplace.types.ts  AccountMinter.client.ts  AccountMinter.message-composer.ts  AccountMinter.types.ts  Bs721Account.client.ts  Bs721Account.message-composer.ts  Bs721Account.types.ts  NameMinter.types.ts  index.ts
