[workspace] 
members = [ 
    "contracts/smart-accounts/*",
    "contracts/bs721-account",
    "contracts/bs721-account-minter",
    "contracts/bs721-account-marketplace",
    "packages/*",
    "scripts",
    ]
# exclude = [
#   "scripts"
# ]

resolver = "2"

[workspace.package]
version = "0.2.0"
authors = [
  "Hard-nett <hardnettt@proton.me>",
]
edition = "2021"
homepage   = "https://bitsong.io"
repository = "https://github.com/bitsongofficial/bs-accounts"
documentation = "https://docs.bitsong.io"
license    = "Apache-2.0"

[workspace.dependencies]
abstract-std = "0.26.0"
cosmwasm-schema = "2.2.0"
cosmwasm-crypto = "2.2.2"
cosmos-sdk-proto = { version = "0.26.1", default-features = false }
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }
cw2 = "2.0.0"
cw-orch = "0.28.0"
cw-orch-core = "2.1.4"
cw-ownable = "2.1.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"

bs721                        = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/wavs",package = "bs721" }
bs721-base                   = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/wavs"}
bs-controllers               = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/wavs", library = "bs-controllers" } 
btsg-nft-scripts             = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/wavs", package = "btsg-nft-scripts" }
btsg-account                 = { path = "packages/btsg-account" }
btsg-wavs                    = { path = "contracts/smart-accounts/btsg-wavs" }
btsg-auth                    = { path = "packages/btsg-auth" }

bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
sha2 = { version = "0.10.8", default-features = false } 
thiserror = { version = "1.0.58" }
schemars = "0.8.16"
serde_json = "1.0.79"