[workspace] 
members = [ 
    "contracts/bs721-account",
    "contracts/bs721-account-minter",
    "contracts/bs721-account-marketplace",
    "contracts/smart-accounts/*",
    "packages/*",
    # "scripts", # commented out until cw@v3 support for cw-orch
    "test-suite",
    ]
exclude = ["contracts/smart-accounts/*",  "test-suite"]

resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Hard-nett <hardnettt@proton.me>"]
edition = "2021"
homepage   = "https://bitsong.io"
repository = "https://github.com/bitsongofficial/bs-accounts"
documentation = "https://docs.bitsong.io"
license    = "Apache-2.0"

[workspace.dependencies]
btsg-account                 = { path = "packages/btsg-account" }
btsg-auth                    = { path = "packages/btsg-auth" }
easy-addr                    = { path = "packages/easy-addr" }
bs721-account-marketplace    = { path = "contracts/bs721-account-marketplace" }
bs721-account-minter         = { path = "contracts/bs721-account-minter" }
bs721-account                = { path = "contracts/bs721-account" }
btsg-irl                     = { path = "contracts/smart-accounts/btsg-irl"  }
btsg-wavs                    = { path = "contracts/smart-accounts/btsg-wavs" }
btsg-zktls                   = { path = "contracts/smart-accounts/btsg-zktls"  }

bs721                        = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cosmwasm@v3",package = "bs721" }
bs721-base                   = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cosmwasm@v3"}
bitsong-rs                   = { git = "https://github.com/permissionlessweb/rs-bitsong"}
bs-controllers               = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cosmwasm@v3", library = "bs-controllers" } 
btsg-nft-scripts             = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cosmwasm@v3", package = "btsg-nft-scripts" }
saa                          = { package = "smart-account-auth", git = "https://github.com/permissionlessweb/smart-account-auth",  branch = "feat/cosmwasm@v3", features = ["cosmwasm", "native", "curves", "session", "utils", "types"]}
saa-common                   = {  git = "https://github.com/permissionlessweb/smart-account-auth",  branch = "feat/cosmwasm@v3", features = [ ]}
saa-passkeys         = { library = "passkeys", git = "https://github.com/permissionlessweb/smart-account-auth",  features = ["cosmwasm"]}
abstract-std      = { version = "0.26.0" }
bech32            = { version = "0.11.0", default-features = false, features = ["alloc"] }
cosmos-sdk-proto  = { version = "0.28.0",  git = "https://github.com/permissionlessweb/cosmos-rust", default-features = false }

cosmwasm-schema   = { version = "3.0.2" }
cosmwasm-std      = { version = "3.0.2", features = ["cosmwasm_1_4", "cosmwasm_2_0"] }
cw2               = { version = "3.0.0" }
cw-orch           = { version = "0.28.0" }
cw-ownable        = { git = "https://github.com/permissionlessweb/cw-plus-plus",package = "cw-ownable" }
cw-storage-macro  = { version = "3.0.1" }
cw-storage-plus   = { version = "3.0.1" } 
cosmwasm-crypto   = { version = "3.0.2" }
cw-utils          = { version = "3.0.0" }
ecdsa             = { version = "0.16.2" }  
k256              = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
ripemd            = { version = "0.1.3",  default-features = false } 
schemars          = { version = "0.8.16" }
semver            = { version = "1.0.26" }
serde             = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json        = { version = "1.0.79" }
sha2              = { version = "0.10.8", default-features = false } 
subtle-encoding   = { version = "0.5.1", features = ["bech32-preview"] }
thiserror         = { version = "1.0.58" }
hex               = { version = "0.4.3" }
 
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true