[workspace]
members = [
    "contracts/*",
    "packages/*",
    "scripts",
    ]
 
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = [
  "Hard-nett <hardnettt@proton.me>",
]
edition = "2021"
homepage   = "https://bitsong.io"
repository = "https://github.com/bitsongofficial/bs-accounts"
documentation = "https://docs.bitsong.io"
license    = "Apache-2.0"

[workspace.dependencies]
bs721-account                = { path = "contracts/bs721-account" }
bs721-account-minter         = { path = "contracts/bs721-account-minter" }
bs721-account-marketplace    = { path = "contracts/bs721-account-marketplace" }
ownership-verifier           = { path = "contracts/ownership-verifier" }
account-registry-middleware  = { path = "contracts/account-registry-middleware" }

cosmwasm-schema       = { version = "2.2.0" }
cosmwasm-crypto       = { version = "2.2.2" }
cosmwasm-std          = { version = "2.2.0", features = ["cosmwasm_1_4","cosmwasm_2_0"] }
cw2                   = { version = "2.0.0" }
cw-ownable            = { version = "2.1.0" }
cw-storage-plus       = { version = "2.0.0" }
cw-utils              = { version = "2.0.0" }
abstract-std          = { git = "https://github.com/permissionlessweb/abstract", branch = "feat/wasm-path" }
# cw-orch             = { version = "0.28.0" }
cw-orch               = { git = "https://github.com/permissionlessweb/cw-orchestrator", branch = "feat/wasm-path" }
bs721                 = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cw@v2", package = "bs721" }
bs721-base            = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cw@v2" }
bs-controllers        = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cw@v2", package = "bs-controllers" }
btsg-nft-scripts      = { git = "https://github.com/permissionlessweb/bs-nfts", branch = "feat/cw@v2", package = "btsg-nft-scripts" }
btsg-account          = { path = "packages/btsg-account" }
btsg-auth             = { path = "packages/btsg-auth" }


bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
sha2 = { version = "0.10.8", default-features = false } 
thiserror = { version = "1.0.58" }
schemars = "0.8.16"
serde_json = "1.0.79"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"