[package]
name = "btsg-account-scripts"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/bitsongofficial/bs-accounts"
version  = { workspace = true }
[dependencies]
# Cryptography & Signing
sha2                        = { workspace = true }
bech32                      = { workspace = true }
ripemd                      = { version = "0.1.3",  default-features = false }
k256                        = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
ecdsa                       = { version = "0.16.2" }

# CosmWasm & Cosmos Ecosystem
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true }
cosmos-sdk-proto            = { workspace = true }
cosmwasm-crypto             = { workspace = true }
cw-ownable                  = { workspace = true }
cosmrs                      = { version = "0.22.0" }
prost-types                 = { version = "0.13.4" }

# NFT & Account Contracts
bs721-base                  = { workspace = true }
btsg-nft-scripts            = { workspace = true }
btsg-account                = { path = "../packages/btsg-account" }
btsg-auth                   = { workspace = true }
bs721-account               = { path = "../contracts/bs721-account", features = ["interface"] }
bs721-account-minter        = { path = "../contracts/bs721-account-minter" }
bs721-account-marketplace   = { path = "../contracts/bs721-account-marketplace" }

# Abstract & CW-Orchestrator
abstract-std                = { workspace = true }
# abstract-client           = { workspace = true }
# abstract-interface        = { workspace = true }
cw-orch-polytone            = { package = "abstract-cw-orch-polytone", version = "6.0.1" }
cw-orch                     = { workspace = true, features = ["daemon"] }
# polypthone                = { package = "abstract-polytone", version = "1.0.5" }
# polypthone-note           = { package = "abstract-polytone-note", version = "3.0.0" }

# CLI & Utilities
clap                        = { version = "4.0.32", features = ["derive"] }
csv                         = { version = "1.2" }
anyhow                      = { version = "1" }
dirs                        = { version = "5.0.1" }
dotenv                      = { version = "0.15.0" }
env_logger                  = { version = "0.10.0" }
pretty_env_logger           = { version = "0.5.0" }
log                         = { version = "0.4.22" }
reqwest                     = { version = "0.11.9" }
serde                       = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_json                  = { version = "1.0.79" }
tokio                       = { version = "1.39.3" }

# Cryptography (External)
commonware-cryptography     = { version = "0.0.53" }
[dev-dependencies]


# Cargo CLI commands
[[bin]]
name = "deploy"
path = "src/bin/manual_deploy.rs"