[package]
name = "btsg-account-scripts"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/bitsongofficial/bs-accounts"
version  = { workspace = true }


[dependencies]
# Cryptography & Signing
sha2                        = { workspace = true }
ripemd                      = { version = "0.1.3",  default-features = false }
k256                        = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
ecdsa                       = { version = "0.16.2" }
commonware-cryptography     = { version = "0.0.53" }

# CosmWasm & Cosmos Ecosystem
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true }
cosmwasm-crypto             = { workspace = true }
cw-ownable                  = { workspace = true }
cosmrs                      = { version = "0.22.0" }

# NFT & Account Contracts
bs721-base                  = { workspace = true }
btsg-nft-scripts            = { workspace = true }
account-registry-middleware = { workspace = true }
btsg-account                = { path = "../packages/btsg-account" }
btsg-auth                   = { workspace = true }
bs721-account               = { workspace = true, features = ["library"] }
bs721-account-minter        = { workspace = true, features = ["library"] }
bs721-account-marketplace   = { workspace = true, features = ["library"] }

# Abstract & CW-Orchestrator
abstract-std                = { workspace = true }
abstract-interface          = { git = "https://github.com/permissionlessweb/abstract", branch = "feat/wasm-path" }
cw-orch                     = { workspace = true, features = ["daemon"] }
cw-blob = {  git = "https://github.com/permissionlessweb/cw-packages", branch = "feat/wasm-path", features = ["library"] }


# CLI & Utilities
clap                        = { version = "4.0.32", features = ["derive"] }
csv                         = { version = "1.2" }
anyhow                      = { version = "1" }
dirs                        = { version = "5.0.1" }
dotenv                      = { version = "0.15.0" }
env_logger                  = { version = "0.10.0" }
pretty_env_logger           = { version = "0.5.0" }
log                         = { version = "0.4.22" }
reqwest                     = { version = "0.11.9" }
serde                       = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_json                  = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio                       = { version = "1.39.3" }

ownership-verifier          = { workspace = true }
[dev-dependencies]


# Cargo CLI commands
[[bin]]
name = "deploy"
path = "src/bin/manual_deploy.rs"