[package]
name = "btsg-account-scripts"
edition    = { workspace = true }
license    = { workspace = true } 
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
abstract-std                  = { workspace = true }
bs721                         = { workspace = true }  # Not present in original, assuming it's not needed
bs721-account                 = { workspace = true, features = ["interface", "abstract"] }
bs721-account-marketplace     = { workspace = true }
bs721-account-minter          = { workspace = true }
bs721-base                    = { workspace = true }
btsg-account                  = { workspace = true }
btsg-auth                     = { workspace = true }
btsg-irl                      = { workspace = true }
btsg-nft-scripts              = { workspace = true }
btsg-wavs                     = { workspace = true }
cosmos-sdk-proto              = { workspace = true }
cosmrs                        = { version = "0.22.0" }
cosmwasm-crypto               = { workspace = true }
cosmwasm-schema               = { workspace = true }
cosmwasm-std                  = { workspace = true }

anyhow                        = { version = "1" }
clap                          = { version = "4.0.32", features = ["derive"] }
bech32                        = { workspace = true }
csv                           = { version = "1.2" }
cw-ownable                    = { workspace = true }
dirs                          = { version = "5.0.1" }
dotenv                        = { version = "0.15.0" }
ecdsa                         = { version = "0.16.2" }
env_logger                    = { version = "0.10.0" }
hex                           = { version = "0.4.3" }
k256                          = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
serde                         = { version = "1.0.140", default-features = false, features = ["derive"] }
log                           = { version = "0.4.22" }
pretty_env_logger             = { version = "0.5.0" }
prost-types                   = { version = "0.13.4" }
reqwest                       = { version = "0.11.9" }
ripemd                        = { version = "0.1.3", default-features = false }
secp256k1                     = { version = "0.30.0" }
serde_json                    = { version = "1.0.79" }
sha2                          = { workspace = true }
tokio                         = { version = "1.39.3", features = [] }

[dev-dependencies]


# Cargo CLI commands
[[bin]]
name = "deploy"
path = "src/bin/manual_deploy.rs"