[package]
name = "account-registry-middleware"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
abstract-std.workspace = true
cosmwasm-schema.workspace = true
bs721.workspace = true
btsg-account.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw-orch = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
