[package]
name = "bs721-account-marketplace"
version  = { workspace = true }
authors  = { workspace = true }
edition  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bs721            = { workspace = true }
bs721-base       = { workspace = true, features = ["library"] }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-storage-macro = { workspace = true }
cw-utils         = { workspace = true }
cw-orch          = { workspace = true }
cw-ownable       = { workspace = true }
schemars         = { workspace = true }
semver           = { workspace = true }
bs-controllers   = { workspace = true }
serde            = { workspace = true }
btsg-account     = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
cw-multi-test = {version = "2.2.0",features = ["stargate", "cosmwasm_2_1"]}

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
