[package]
name = "bs721-account-marketplace"
version  = { workspace = true }
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bs721            = { workspace = true }
bs721-account    = { workspace = true, features = ["library"] }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-storage-macro = "2.1.0"
cw-utils         = { workspace = true }
cw-orch          = { workspace = true }
bs-controllers   = { workspace = true }
btsg-account     = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
cw-multi-test = {version = "2.2.0",features = ["stargate", "cosmwasm_2_1"]}
