[package]
name = "bs721-account-minter"
version  = { workspace = true }
authors  = { workspace = true }
edition  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
bs721                 = { workspace = true }
bs721-base   = { workspace = true, features = ["library"]}
bs721-account          = {  workspace = true, features = ["library"] }
bs721-account-marketplace = { workspace = true, features = ["library"] }
btsg-account       = { workspace = true }
cw-ownable         = { workspace = true }
cosmwasm-schema    = { workspace = true }
cw-utils           = { workspace = true }
bs-controllers     = { workspace = true }
cw-orch                = { workspace = true }
cosmwasm-std           = { workspace = true, features = ["cosmwasm_1_4","cosmwasm_2_0", "staking"] }
cw-storage-plus        = { workspace = true }
cw2                    = { workspace = true }
schemars               = { workspace = true }
serde                  = { workspace = true, default-features = false, features = ["derive"] }
thiserror              = { workspace = true }

[dev-dependencies]