[package]
name = "bs721-account"
version   = { workspace = true }
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# use library feature to disable all instantiate/execute/query exports
library = []
abstract = ["dep:abstract-std"]
interface = ["dep:cw-orch"]

[dependencies]
bs721                     = { workspace = true}
bs721-base                = { workspace = true, features = ["library"]}
bs721-account-marketplace = { workspace = true, features = ["library"] }
bs-controllers            = { workspace = true }
btsg-account              = { workspace = true }
cosmwasm-schema           = { workspace = true }
cosmwasm-std              = { workspace = true}
abstract-std              = { workspace = true, optional = true }
cw-orch                   = { workspace = true, optional = true }
cw-ownable                = { workspace = true }
cw-storage-plus           = { workspace = true }
cw2                       = { workspace = true}
cw-utils                  = { workspace = true }
schemars                  = { workspace = true }
serde                     = { workspace = true, default-features = false, features = ["derive"] }
subtle-encoding           = { workspace = true, features = ["bech32-preview"] }
thiserror                 = { workspace = true }

[dev-dependencies]
