[package]
name = "bs721-account"
version   = { workspace = true }
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
default = ["interface"]
library = []
interface = ["dep:cw-orch"]

[dependencies]
abstract-std        = { workspace = true }
bs721               = { workspace = true }
bs721-base          = { workspace = true, features = ["library"] }
btsg-account        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw2                 = { workspace = true }
bs-controllers      = { workspace = true }
cw-orch             = { workspace = true, optional = true }
cw-ownable          = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
schemars            = { workspace = true }
serde               = { workspace = true, default-features = false, features = ["derive"] }
subtle-encoding     = { workspace = true, features = ["bech32-preview"] }
thiserror           = { workspace = true }

[dev-dependencies]
cw-multi-test       = { version = "2.2.0", features = ["stargate", "cosmwasm_2_1"] }
