[package]
name = "ownership-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
abstract-std          = { version = "0.26.0" }
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw-orch = { workspace = true }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
