[package]
name          = "btsg-dao"
description   = "A custom fantoken minter, being used as an event ticketing distribution."
authors       = [""]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-ownable         = { workspace = true }
cw-orch            = { workspace = true }
cw-utils           = { workspace = true }
btsg-auth          = { workspace = true }
bitsong-rs          = { workspace = true }
btsg-account       = { workspace = true }
cw2                = { workspace = true }
sha2               = { workspace = true }
sha3               = { version = "0.10.8"}
hex = "0.4.3"
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa-core", "ecdsa"] }
digest = {version = "0.10", default-features = false }


schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }


[dev-dependencies]