[package]
name          = "btsg-eth"
description   = "A demo for authorizations using eth personal offline signatures"
authors       = [""]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-ownable         = { workspace = true }
cw-orch            = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }


btsg-auth  = { package = "btsg-auth", git = "https://github.com/permissionlessweb/bs-nfts", branch = "cosmwasm-std-v2" } 
saa-passkeys  = { library = "passkeys", git = "https://github.com/MegaRockLabs/smart-account-auth",  features = ["cosmwasm"]}
saa  = { package = "smart-account-auth", git = "https://github.com/MegaRockLabs/smart-account-auth",  features = ["cosmwasm", "native", "curves", "session", "utils", "types"]}
saa-common  = {  git = "https://github.com/MegaRockLabs/smart-account-auth",  features = [ ]}


schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
