[package]
name          = "btsg-eth"
description   = "A demo for authorizations using eth personal offline signatures"
authors       = [""]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-ownable         = { workspace = true }
cw-orch            = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }


btsg-auth  = { workspace = true }
btsg-account              = { workspace = true }

saa   = { workspace = true }
saa-common    = { workspace = true }


schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
