[package]
name          = "btsg-irl"
description   = "A custom fantoken minter, being used as an event ticketing distribution."
authors       = [""]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-ownable         = { workspace = true }
cw-orch            = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }

schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }


[dev-dependencies]